src/assets/scss/pages/_home.scss
/* ... */
@keyframes auto-scroll {
  from {
    transform: translate3d(0,0,0);
  }
  to {
    transform: translate3d(0,-335%,0);
  }
}

// bottom-btns

.bottom-btns {
  margin-top: 152px;
  @include r(768) {
    margin-top: 60px;
  }
  &__sum, &__submit {
    display: flex;
    gap: 0 1em;
    margin-right: auto;
  }
  &__sum {
    @include r(1200) {
      display: none;
    }
  }
  &__submit {
    margin-right: 0;
    @include r(1200) {
      margin: 0 auto;
    }
    @include r(480) {
      flex-wrap: wrap;
      justify-content: center;
      gap: 8px 0;
    }
  }
  &__btn {
    padding: 12px 32px 14px;
    font-size: 1.25em;
    line-height: 1.4em;
    color: #127CE1;
    background: #EFF7FF;
    mask-image: paint(smooth-corners);
    -webkit-mask-image: paint(smooth-corners);
    --smooth-corners: 8;
    transition: background-color .3s ease-in-out, color .3s ease-in-out;
    &:hover,
    &_blue {
      color: #fff;
      background-color: #2688E5;
    }
    @include r(1366) {
      font-size: 1.125em;
    }
    @include r(650) {
      width: 100%;
      mask-image: none;
      border-radius: 8px;
    }
  }
  &__input {
    border: none;
    padding: 12px 32px 16px;
    font-size: 1.25em;
    line-height: 1.4em;
    color: #127CE1;
    text-align: center;
    background: #EFF7FF;
    mask-image: paint(smooth-corners);
    -webkit-mask-image: paint(smooth-corners);
    --smooth-corners: 8;
    &::placeholder {
      font-size: 1.25em;
      line-height: 1.4em;
      color: #127CE1;
      transition: color .3s ease-in-out;
    }
    &:focus {
      outline: 2px solid #127CE1;
      ::placeholder {
        color: transparent;
      }
    }
    &::-webkit-outer-spin-button,
    &::-webkit-inner-spin-button {
      -webkit-appearance: none;
      margin: 0;
    }
  }
}

// hero-mobile

.hero-mobile {
  position: relative;
  display: none;
  min-height: 352px;
  background-image: url(../img/hero-banner.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  @include r(650) {
    display: block;
  }
  &__title-wr {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: flex-end;
    height: 362px;
  }
  &__title {
    font-weight: 700;
    font-size: 38px;
    line-height: 1.1;
    color: #fff;
    padding-bottom: 30px;
  }
}

// mobile btns top

.mobile-top-btns {
  margin-top: 24px;
  margin-bottom: 32px;
  &__btn {
    display: block;
    padding: 12px 83px 16px;
    font-weight: 500;
    font-size: 16px;
    width: 100%;
    margin-bottom: 8px;
    mask-image: paint(smooth-corners);
    -webkit-mask-image: paint(smooth-corners);
    --smooth-corners: 16;
    &_grey {
      margin-bottom: 0;
      color: #127ce1;
      background-color: #eff7ff;
    }
  }
}

